--- a/style/style.css
+++ b/style/style.css
@@ -76,6 +76,19 @@ img {
     background-image: none;
   }
 }
+@media (max-width: 1023px) {
+  .header {
+    padding-bottom: 80px;
+  }
+}
+@media (max-width: 767px) {
+  .header {
+    padding-top: 20px;
+    padding-left: 0;
+    padding-right: 0;
+    padding-bottom: 40px;
+  }
+}
 .header_bg-left {
   display: none;
 }
@@ -86,6 +99,12 @@ img {
     z-index: 1;
     left: 0;
     top: 0;
+  }
+}
+@media (max-width: 767px) {
+  .header_bg-left {
+    width: 144px;
+    height: auto;
   }
 }
 .header_bg-right {
@@ -100,6 +119,12 @@ img {
     right: 0;
   }
 }
+@media (max-width: 767px) {
+  .header_bg-right {
+    width: 70px;
+    height: auto;
+  }
+}
 .header_top {
   display: flex;
   justify-content: space-between;
@@ -109,6 +134,11 @@ img {
   .header_top {
     flex-direction: column;
     gap: 30px;
+  }
+}
+@media (max-width: 767px) {
+  .header_top {
+    gap: 15px;
   }
 }
 .header_title {
@@ -137,7 +167,7 @@ img {
 @media (max-width: 767px) {
   .header_title {
     font-size: 40px;
-    margin-top: 70px;
+    padding: 0 16px;
   }
 }
 .header_title img {
@@ -147,6 +177,13 @@ img {
 @media (max-width: 1439px) {
   .header_title img {
     width: 70px;
+    height: 70px;
+  }
+}
+@media (max-width: 767px) {
+  .header_title img {
+    width: 50px;
+    height: 50px;
   }
 }
 .header_menu {
@@ -156,6 +193,19 @@ img {
   margin-top: 10px;
   position: relative;
   z-index: 2;
+}
+.header_menu::-webkit-scrollbar {
+  display: none;
+}
+@media (max-width: 767px) {
+  .header_menu {
+    overflow-x: auto;
+    max-width: 100vw;
+    scroll-snap-type: x mandatory;
+    scrollbar-width: 0;
+    padding: 0 16px;
+    margin-top: 0;
+  }
 }
 .header_menuItem {
   text-decoration: none;
@@ -170,12 +220,23 @@ img {
   background: #1d1d1f;
   padding: 2px 38px;
   border-radius: 15px;
+  transition: 0.3s ease;
 }
 @media (max-width: 1439px) {
   .header_menuItem {
     font-size: 25px;
     padding: 2px 30px;
   }
+}
+@media (max-width: 767px) {
+  .header_menuItem {
+    font-size: 20px;
+    border-radius: 8px;
+  }
+}
+.header_menuItem:hover, .header_menuItem:focus {
+  background: #43b446;
+  color: #000;
 }
 .header_bottom {
   display: flex;
@@ -185,6 +246,16 @@ img {
 @media (max-width: 1919px) {
   .header_bottom {
     padding-left: 0;
+  }
+}
+@media (max-width: 1023px) {
+  .header_bottom {
+    flex-direction: column;
+  }
+}
+@media (max-width: 767px) {
+  .header_bottom {
+    padding: 0 16px;
   }
 }
 .header_left {
@@ -197,6 +268,20 @@ img {
     margin-top: 70px;
   }
 }
+@media (max-width: 1023px) {
+  .header_left {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+  }
+}
+@media (max-width: 767px) {
+  .header_left {
+    margin-top: 40px;
+    padding-right: 0;
+  }
+}
 .header_right {
   width: 50%;
   margin-top: 150px;
@@ -204,6 +289,19 @@ img {
 @media (max-width: 1919px) {
   .header_right {
     margin-top: 70px;
+  }
+}
+@media (max-width: 1023px) {
+  .header_right {
+    position: relative;
+    z-index: 3;
+    order: -1;
+    width: 100%;
+  }
+}
+@media (max-width: 767px) {
+  .header_right {
+    margin-top: 40px;
   }
 }
 .header_right img {
@@ -220,11 +318,23 @@ img {
   line-height: 75px; /* 166.667% */
   letter-spacing: 1.8px;
   text-transform: uppercase;
+  padding-right: 10px;
 }
 @media (max-width: 1439px) {
   .header_description {
     font-size: 30px;
     line-height: 1.3;
+  }
+}
+@media (max-width: 1023px) {
+  .header_description {
+    text-align: center;
+  }
+}
+@media (max-width: 767px) {
+  .header_description {
+    padding-right: 0;
+    font-size: 22px;
   }
 }
 .header_link {
@@ -242,8 +352,17 @@ img {
   line-height: normal;
   letter-spacing: -0.6px;
 }
+@media (max-width: 767px) {
+  .header_link {
+    margin-top: 30px;
+    justify-content: center;
+    width: 100%;
+    padding: 10px 20px;
+    font-size: 22px;
+  }
+}
 .header_link:hover, .header_link:focus {
-  opacity: 0.6;
+  transform: scale(1.1);
 }
 .header_adress {
   margin-top: 40px;
@@ -255,6 +374,13 @@ img {
   font-variant: small-caps;
   letter-spacing: 0.6px;
 }
+@media (max-width: 767px) {
+  .header_adress {
+    margin-top: 20px;
+    font-size: 18px;
+  }
+}
+
 .about {
   display: flex;
   flex-direction: column;
@@ -264,6 +390,21 @@ img {
   max-width: 1779px;
   padding: 0 60px;
   padding-bottom: 129px;
+}
+@media (max-width: 1439px) {
+  .about {
+    padding-bottom: 20px;
+  }
+}
+@media (max-width: 1023px) {
+  .about {
+    padding: 0 30px;
+  }
+}
+@media (max-width: 767px) {
+  .about {
+    padding: 0 16px;
+  }
 }
 .about_title {
   align-self: flex-end;
@@ -277,6 +418,24 @@ img {
   letter-spacing: 1px;
   text-transform: uppercase;
 }
+@media (max-width: 1439px) {
+  .about_title {
+    letter-spacing: normal;
+    line-height: 1.1;
+    margin-top: 70px;
+  }
+}
+@media (max-width: 1023px) {
+  .about_title {
+    font-size: 40px;
+  }
+}
+@media (max-width: 767px) {
+  .about_title {
+    margin-top: 40px;
+    font-size: 30px;
+  }
+}
 .about_text {
   margin-top: 152px;
   color: #fff;
@@ -288,6 +447,11 @@ img {
   width: 100%;
   max-width: 1407px;
 }
+@media (max-width: 1439px) {
+  .about_text {
+    margin-top: 70px;
+  }
+}
 @media (max-width: 1023px) {
   .about_text {
     font-size: 30px;
@@ -296,7 +460,8 @@ img {
 }
 @media (max-width: 767px) {
   .about_text {
-    font-size: 20px;
+    margin-top: 30px;
+    font-size: 22px;
   }
 }
 
@@ -309,6 +474,23 @@ img {
   padding: 0 60px;
   margin-top: 140px;
 }
+@media (max-width: 1439px) {
+  .mission {
+    margin-top: 70px;
+    padding: 0 30px;
+  }
+}
+@media (max-width: 1023px) {
+  .mission {
+    margin-top: 130px;
+  }
+}
+@media (max-width: 767px) {
+  .mission {
+    padding: 0 16px;
+    margin-top: 80px;
+  }
+}
 .mission_title {
   color: #fff;
   text-align: center;
@@ -318,6 +500,17 @@ img {
   line-height: 75px; /* 150% */
   letter-spacing: 2px;
   text-transform: uppercase;
+}
+@media (max-width: 1023px) {
+  .mission_title {
+    font-size: 40px;
+    line-height: 1.2;
+  }
+}
+@media (max-width: 767px) {
+  .mission_title {
+    font-size: 30px;
+  }
 }
 .mission_text {
   padding: 88px 68px;
@@ -335,6 +528,25 @@ img {
   line-height: 60px;
   text-transform: uppercase;
 }
+@media (max-width: 1439px) {
+  .mission_text {
+    margin-top: 70px;
+  }
+}
+@media (max-width: 1023px) {
+  .mission_text {
+    font-size: 28px;
+    padding: 50px;
+    line-height: 1.2;
+  }
+}
+@media (max-width: 767px) {
+  .mission_text {
+    margin-top: 40px;
+    padding: 25px;
+    font-size: 20px;
+  }
+}
 
 .feature {
   margin-top: 170px;
@@ -343,6 +555,19 @@ img {
   background-size: cover;
   background-repeat: no-repeat;
   background-position-y: 180px;
+}
+@media (max-width: 1023px) {
+  .feature {
+    background: none;
+    padding: 0 30px;
+    margin-top: 70px;
+  }
+}
+@media (max-width: 767px) {
+  .feature {
+    margin-top: 40px;
+    padding: 0 16px;
+  }
 }
 .feature_container {
   width: 100%;
@@ -359,6 +584,17 @@ img {
   letter-spacing: 2px;
   text-transform: uppercase;
 }
+@media (max-width: 1023px) {
+  .feature_title {
+    font-size: 40px;
+    line-height: 1.2;
+  }
+}
+@media (max-width: 767px) {
+  .feature_title {
+    font-size: 30px;
+  }
+}
 .feature_list {
   display: flex;
   flex-direction: column;
@@ -366,6 +602,19 @@ img {
   width: 100%;
   margin-top: 220px;
   list-style: none;
+}
+@media (max-width: 1023px) {
+  .feature_list {
+    align-items: flex-start;
+    margin-top: 70px;
+    gap: 50px;
+  }
+}
+@media (max-width: 767px) {
+  .feature_list {
+    gap: 30px;
+    margin-top: 30px;
+  }
 }
 .feature_item {
   display: flex;
@@ -380,6 +629,21 @@ img {
   letter-spacing: 2px;
   text-transform: uppercase;
 }
+@media (max-width: 1439px) {
+  .feature_item {
+    font-size: 40px;
+    line-height: 1.2;
+  }
+}
+@media (max-width: 767px) {
+  .feature_item {
+    position: relative;
+    font-size: 20px;
+    padding-left: 30px;
+    align-items: flex-start;
+    text-align: left;
+  }
+}
 .feature_item span {
   display: block;
   width: 50px;
@@ -387,13 +651,42 @@ img {
   border-radius: 50%;
   background: #28822a;
 }
+@media (max-width: 1023px) {
+  .feature_item span {
+    width: 30px;
+    height: 30px;
+  }
+}
+@media (max-width: 767px) {
+  .feature_item span {
+    position: absolute;
+    left: 0;
+    top: 50%;
+    transform: translateY(-50%);
+    width: 20px;
+    height: 20px;
+    margin-right: 10px;
+  }
+}
 .feature_item-1 {
   align-self: flex-start;
   margin-left: 180px;
 }
+@media (max-width: 1023px) {
+  .feature_item-1 {
+    align-self: initial;
+    margin: 0;
+  }
+}
 .feature_item-2 {
   margin-top: 400px;
   margin-left: 236px;
+}
+@media (max-width: 1023px) {
+  .feature_item-2 {
+    align-self: initial;
+    margin: 0;
+  }
 }
 .feature_line-wrapper {
   display: flex;
@@ -402,6 +695,34 @@ img {
   margin-top: 38px;
   margin-left: 334px;
 }
+@media (max-width: 1650px) {
+  .feature_line-wrapper {
+    margin-top: 70px;
+    width: 100%;
+    margin-left: 0;
+    padding: 0 30px;
+  }
+}
+@media (max-width: 1023px) {
+  .feature_line-wrapper {
+    margin-top: 0;
+    padding: 0;
+    gap: 50px;
+    flex-direction: column;
+    justify-content: initial;
+    align-items: flex-start;
+  }
+}
+@media (max-width: 767px) {
+  .feature_line-wrapper {
+    gap: 30px;
+  }
+}
+@media (max-width: 1023px) {
+  .feature br {
+    display: none;
+  }
+}
 
 .roadmap {
   display: flex;
@@ -409,6 +730,26 @@ img {
   align-items: center;
   margin-top: 517px;
   width: 100%;
+}
+@media (max-width: 1650px) {
+  .roadmap {
+    margin-top: 150px;
+  }
+}
+@media (max-width: 1439px) {
+  .roadmap {
+    padding: 0 30px;
+  }
+}
+@media (max-width: 1023px) {
+  .roadmap {
+    margin-top: 100px;
+  }
+}
+@media (max-width: 767px) {
+  .roadmap {
+    margin-top: 120px;
+  }
 }
 .roadmap_title {
   color: #fff;
@@ -425,6 +766,11 @@ img {
     font-size: 40px;
   }
 }
+@media (max-width: 767px) {
+  .roadmap_title {
+    font-size: 30px;
+  }
+}
 .roadmap_stages {
   width: 100%;
 }
@@ -434,14 +780,65 @@ img {
   justify-content: center;
   gap: 70px;
 }
+@media (max-width: 1650px) {
+  .roadmap_top {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    justify-items: center;
+  }
+}
+@media (max-width: 767px) {
+  .roadmap_top {
+    margin-top: 70px;
+    grid-template-columns: 1fr;
+  }
+}
 .roadmap_bottom {
   display: flex;
   align-items: center;
   justify-content: center;
   gap: 140px;
 }
+@media (max-width: 1650px) {
+  .roadmap_bottom {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    justify-items: center;
+    margin-top: 50px;
+    gap: 70px;
+  }
+}
+@media (max-width: 1023px) {
+  .roadmap_bottom {
+    grid-template-columns: 1fr;
+  }
+}
 .roadmap_item-2, .roadmap_item-4 {
   margin-top: 200px;
+}
+@media (max-width: 1650px) {
+  .roadmap_item-2, .roadmap_item-4 {
+    margin-top: 0;
+  }
+}
+@media (max-width: 1650px) {
+  .roadmap_item-7 {
+    grid-column: 1/-1;
+  }
+}
+@media (max-width: 1023px) {
+  .roadmap_item-1, .roadmap_item-2, .roadmap_item-3, .roadmap_item-4 {
+    width: 258px;
+    height: 443px;
+  }
+}
+@media (max-width: 500px) {
+  .roadmap_item-5, .roadmap_item-7 {
+    width: 100%;
+    height: auto;
+    -o-object-fit: contain;
+       object-fit: contain;
+  }
 }
 
 .coming {
@@ -452,6 +849,16 @@ img {
   width: 100%;
   padding-top: 377px;
   padding-bottom: 143px;
+}
+@media (max-width: 1919px) {
+  .coming {
+    padding-top: 120px;
+  }
+}
+@media (max-width: 767px) {
+  .coming {
+    padding-bottom: 60px;
+  }
 }
 .coming_link {
   position: relative;
@@ -467,11 +874,34 @@ img {
   background: #43b446;
   padding: 20px 95px;
   margin-left: 184px;
+  transition: 0.3s ease;
+}
+.coming_link:hover, .coming_link:focus {
+  transform: scale(1.1);
 }
 .coming_link img {
   position: absolute;
   bottom: -160px;
   right: -15px;
+}
+@media (max-width: 767px) {
+  .coming_link img {
+    width: 100px;
+    height: auto;
+    bottom: -81px;
+  }
+}
+@media (max-width: 1439px) {
+  .coming_link {
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+@media (max-width: 767px) {
+  .coming_link {
+    font-size: 30px;
+    padding: 10px 30px;
+  }
 }
 .coming_screen {
   position: relative;
@@ -479,15 +909,47 @@ img {
   margin-top: -20px;
   right: -120px;
 }
+@media (max-width: 1919px) {
+  .coming_screen {
+    margin-top: 160px;
+  }
+}
+@media (max-width: 1439px) {
+  .coming_screen {
+    width: 75%;
+    right: 0;
+  }
+}
+@media (max-width: 1023px) {
+  .coming_screen {
+    width: 90%;
+  }
+}
+@media (max-width: 767px) {
+  .coming_screen {
+    margin-top: 100px;
+  }
+}
 .coming_screenImg-1 {
   position: relative;
   z-index: 3;
+}
+@media (max-width: 1439px) {
+  .coming_screenImg-1 {
+    width: 100%;
+    height: auto;
+  }
 }
 .coming_screenImg-2 {
   position: absolute;
   z-index: 2;
   top: 96px;
   right: 120px;
+}
+@media (max-width: 1919px) {
+  .coming_screenImg-2 {
+    display: none;
+  }
 }
 .coming_screenImg-3 {
   position: absolute;
@@ -496,6 +958,11 @@ img {
   right: 94px;
   width: 1300px;
   height: 1315px;
+}
+@media (max-width: 1919px) {
+  .coming_screenImg-3 {
+    display: none;
+  }
 }
 .coming_description {
   margin-top: 299px;
@@ -508,6 +975,18 @@ img {
   text-transform: uppercase;
   padding: 0 40px;
 }
+@media (max-width: 1919px) {
+  .coming_description {
+    margin-top: 130px;
+  }
+}
+@media (max-width: 767px) {
+  .coming_description {
+    margin-top: 40px;
+    font-size: 20px;
+    line-height: 1.2;
+  }
+}
 
 .footer {
   padding-top: 40px;
@@ -518,6 +997,12 @@ img {
   background-size: cover;
   background-repeat: no-repeat;
 }
+@media (max-width: 1600px) {
+  .footer {
+    padding-bottom: 100px;
+    background-position: center;
+  }
+}
 .footer_container {
   display: flex;
   align-items: center;
@@ -526,6 +1011,14 @@ img {
   padding: 0 60px;
   padding-left: 139px;
   max-width: 1850px;
+}
+@media (max-width: 1600px) {
+  .footer_container {
+    flex-direction: column;
+    justify-content: initial;
+    align-items: center;
+    padding: 0 30px;
+  }
 }
 .footer_titleWrapper {
   display: flex;
@@ -548,6 +1041,8 @@ img {
   .footer_title {
     font-size: 40px;
     line-height: 1.2;
+    flex-direction: column;
+    align-items: center;
   }
 }
 @media (max-width: 767px) {
@@ -567,12 +1062,17 @@ img {
 .footer_socialList {
   margin-top: 40px;
   display: flex;
-  gap: 50px;
+  gap: 30px;
 }
-@media (max-width: 1023px) {
+@media (max-width: 1600px) {
   .footer_socialList {
-    margin-top: 25px;
-    gap: 30px;
+    margin-top: 90px;
+  }
+}
+@media (max-width: 767px) {
+  .footer_socialList {
+    flex-wrap: wrap;
+    justify-content: center;
   }
 }
 .footer_socialItem {
@@ -586,7 +1086,54 @@ img {
   border-radius: 11.154px;
   border: 2.231px solid #fff;
   box-shadow: 0px 0px 5px 0px rgba(17, 255, 68, 0.4);
+  color: #3a9f3b;
 }
 .footer_socialItem:hover, .footer_socialItem:focus {
-  opacity: 0.7;
+  color: #fff;
+  box-shadow: none;
+}
+.footer_socialItem--apple {
+  position: relative;
+  background: transparent;
+  padding: 0;
+}
+.footer_socialItem--apple::after {
+  content: "coming soon";
+  position: absolute;
+  text-transform: uppercase;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 426px;
+  height: 61px;
+  border-radius: 17.557px;
+  background: #449545;
+  color: #fff;
+  text-align: center;
+  font-size: 30px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 75px; /* 250% */
+  letter-spacing: 1.2px;
+  text-transform: uppercase;
+  top: -75px;
+  transition: 0.6s cubic-bezier(0.55, 0, 0.1, 1);
+  transform: scale(0);
+  font-family: "Anton";
+}
+@media (max-width: 1023px) {
+  .footer_socialItem--apple::after {
+    width: 200px;
+    font-size: 20px;
+    padding: 10px 30px;
+    line-height: 1;
+  }
+}
+@media (max-width: 767px) {
+  .footer_socialItem--apple::after {
+    left: 0;
+  }
+}
+.footer_socialItem--apple:hover::after, .footer_socialItem--apple:focus::after {
+  transform: scale(1);
 }/*# sourceMappingURL=style.css.map */
