--- a/style/style.scss
+++ b/style/style.scss
@@ -125,9 +125,14 @@ img {
   }
 
   @include vp-1023 {
+    padding-bottom: 80px;
   }
 
   @include vp-767 {
+    padding-top: 20px;
+    padding-left: 0;
+    padding-right: 0;
+    padding-bottom: 40px;
   }
 
   &_bg-left {
@@ -139,6 +144,11 @@ img {
       z-index: 1;
       left: 0;
       top: 0;
+    }
+
+    @include vp-767 {
+      width: 144px;
+      height: auto;
     }
   }
 
@@ -152,6 +162,11 @@ img {
       top: 0;
       right: 0;
     }
+
+    @include vp-767 {
+      width: 70px;
+      height: auto;
+    }
   }
 
   &_top {
@@ -162,6 +177,10 @@ img {
     @media (max-width: 1250px) {
       flex-direction: column;
       gap: 30px;
+    }
+
+    @include vp-767 {
+      gap: 15px;
     }
   }
 
@@ -188,7 +207,7 @@ img {
 
     @include vp-767 {
       font-size: 40px;
-      margin-top: 70px;
+      padding: 0 16px;
     }
 
     img {
@@ -197,6 +216,12 @@ img {
 
       @include vp-1439 {
         width: 70px;
+        height: 70px;
+      }
+
+      @include vp-767 {
+        width: 50px;
+        height: 50px;
       }
     }
   }
@@ -208,6 +233,19 @@ img {
     margin-top: 10px;
     position: relative;
     z-index: 2;
+
+    &::-webkit-scrollbar {
+      display: none;
+    }
+
+    @include vp-767 {
+      overflow-x: auto;
+      max-width: 100vw;
+      scroll-snap-type: x mandatory;
+      scrollbar-width: 0;
+      padding: 0 16px;
+      margin-top: 0;
+    }
   }
 
   &_menuItem {
@@ -223,10 +261,22 @@ img {
     background: #1d1d1f;
     padding: 2px 38px;
     border-radius: 15px;
+    transition: $trans-default;
 
     @include vp-1439 {
       font-size: 25px;
       padding: 2px 30px;
+    }
+
+    @include vp-767 {
+      font-size: 20px;
+      border-radius: 8px;
+    }
+
+    &:hover,
+    &:focus {
+      background: #43b446;
+      color: #000;
     }
   }
 
@@ -238,6 +288,14 @@ img {
     @include vp-1919 {
       padding-left: 0;
     }
+
+    @include vp-1023 {
+      flex-direction: column;
+    }
+
+    @include vp-767 {
+      padding: 0 16px;
+    }
   }
 
   &_left {
@@ -248,6 +306,18 @@ img {
     @include vp-1919 {
       margin-top: 70px;
     }
+
+    @include vp-1023 {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      width: 100%;
+    }
+
+    @include vp-767 {
+      margin-top: 40px;
+      padding-right: 0;
+    }
   }
 
   &_right {
@@ -256,6 +326,17 @@ img {
 
     @include vp-1919 {
       margin-top: 70px;
+    }
+
+    @include vp-1023 {
+      position: relative;
+      z-index: 3;
+      order: -1;
+      width: 100%;
+    }
+
+    @include vp-767 {
+      margin-top: 40px;
     }
 
     img {
@@ -274,6 +355,7 @@ img {
     line-height: 75px; /* 166.667% */
     letter-spacing: 1.8px;
     text-transform: uppercase;
+    padding-right: 10px;
 
     @include vp-1439 {
       font-size: 30px;
@@ -281,9 +363,12 @@ img {
     }
 
     @include vp-1023 {
+      text-align: center;
     }
 
     @include vp-767 {
+      padding-right: 0;
+      font-size: 22px;
     }
   }
 
@@ -302,15 +387,17 @@ img {
     line-height: normal;
     letter-spacing: -0.6px;
 
-    @include vp-1023 {
-    }
-
     @include vp-767 {
+      margin-top: 30px;
+      justify-content: center;
+      width: 100%;
+      padding: 10px 20px;
+      font-size: 22px;
     }
 
     &:hover,
     &:focus {
-      opacity: 0.6;
+      transform: scale(1.1);
     }
   }
 
@@ -324,10 +411,9 @@ img {
     font-variant: small-caps;
     letter-spacing: 0.6px;
 
-    @include vp-1023 {
-    }
-
     @include vp-767 {
+      margin-top: 20px;
+      font-size: 18px;
     }
   }
 }
@@ -342,7 +428,16 @@ img {
   padding: 0 60px;
   padding-bottom: 129px;
 
+  @include vp-1439 {
+    padding-bottom: 20px;
+  }
+
+  @include vp-1023 {
+    padding: 0 30px;
+  }
+
   @include vp-767 {
+    padding: 0 16px;
   }
 
   &_title {
@@ -357,10 +452,19 @@ img {
     letter-spacing: 1px;
     text-transform: uppercase;
 
+    @include vp-1439 {
+      letter-spacing: normal;
+      line-height: 1.1;
+      margin-top: 70px;
+    }
+
     @include vp-1023 {
+      font-size: 40px;
     }
 
     @include vp-767 {
+      margin-top: 40px;
+      font-size: 30px;
     }
   }
 
@@ -375,13 +479,18 @@ img {
     width: 100%;
     max-width: 1407px;
 
+    @include vp-1439 {
+      margin-top: 70px;
+    }
+
     @include vp-1023 {
       font-size: 30px;
       line-height: 1.2;
     }
 
     @include vp-767 {
-      font-size: 20px;
+      margin-top: 30px;
+      font-size: 22px;
     }
   }
 }
@@ -395,6 +504,20 @@ img {
   padding: 0 60px;
   margin-top: 140px;
 
+  @include vp-1439 {
+    margin-top: 70px;
+    padding: 0 30px;
+  }
+
+  @include vp-1023 {
+    margin-top: 130px;
+  }
+
+  @include vp-767 {
+    padding: 0 16px;
+    margin-top: 80px;
+  }
+
   &_title {
     color: #fff;
     text-align: center;
@@ -404,6 +527,15 @@ img {
     line-height: 75px; /* 150% */
     letter-spacing: 2px;
     text-transform: uppercase;
+
+    @include vp-1023 {
+      font-size: 40px;
+      line-height: 1.2;
+    }
+
+    @include vp-767 {
+      font-size: 30px;
+    }
   }
 
   &_text {
@@ -421,6 +553,22 @@ img {
     font-weight: 400;
     line-height: 60px;
     text-transform: uppercase;
+
+    @include vp-1439 {
+      margin-top: 70px;
+    }
+
+    @include vp-1023 {
+      font-size: 28px;
+      padding: 50px;
+      line-height: 1.2;
+    }
+
+    @include vp-767 {
+      margin-top: 40px;
+      padding: 25px;
+      font-size: 20px;
+    }
   }
 }
 
@@ -431,6 +579,17 @@ img {
   background-size: cover;
   background-repeat: no-repeat;
   background-position-y: 180px;
+
+  @include vp-1023 {
+    background: none;
+    padding: 0 30px;
+    margin-top: 70px;
+  }
+
+  @include vp-767 {
+    margin-top: 40px;
+    padding: 0 16px;
+  }
 
   &_container {
     width: 100%;
@@ -447,6 +606,15 @@ img {
     line-height: 65px; /* 150% */
     letter-spacing: 2px;
     text-transform: uppercase;
+
+    @include vp-1023 {
+      font-size: 40px;
+      line-height: 1.2;
+    }
+
+    @include vp-767 {
+      font-size: 30px;
+    }
   }
 
   &_list {
@@ -456,6 +624,17 @@ img {
     width: 100%;
     margin-top: 220px;
     list-style: none;
+
+    @include vp-1023 {
+      align-items: flex-start;
+      margin-top: 70px;
+      gap: 50px;
+    }
+
+    @include vp-767 {
+      gap: 30px;
+      margin-top: 30px;
+    }
   }
 
   &_item {
@@ -471,22 +650,60 @@ img {
     letter-spacing: 2px;
     text-transform: uppercase;
 
+    @include vp-1439 {
+      font-size: 40px;
+      line-height: 1.2;
+    }
+
+    @include vp-767 {
+      position: relative;
+      font-size: 20px;
+      padding-left: 30px;
+      align-items: flex-start;
+      text-align: left;
+    }
+
     span {
       display: block;
       width: 50px;
       height: 50px;
       border-radius: 50%;
       background: #28822a;
+
+      @include vp-1023 {
+        width: 30px;
+        height: 30px;
+      }
+
+      @include vp-767 {
+        position: absolute;
+        left: 0;
+        top: 50%;
+        transform: translateY(-50%);
+        width: 20px;
+        height: 20px;
+        margin-right: 10px;
+      }
     }
 
     &-1 {
       align-self: flex-start;
       margin-left: 180px;
+
+      @include vp-1023 {
+        align-self: initial;
+        margin: 0;
+      }
     }
 
     &-2 {
       margin-top: 400px;
       margin-left: 236px;
+
+      @include vp-1023 {
+        align-self: initial;
+        margin: 0;
+      }
     }
   }
 
@@ -496,6 +713,32 @@ img {
     width: 1273px;
     margin-top: 38px;
     margin-left: 334px;
+
+    @media (max-width: 1650px) {
+      margin-top: 70px;
+      width: 100%;
+      margin-left: 0;
+      padding: 0 30px;
+    }
+
+    @include vp-1023 {
+      margin-top: 0;
+      padding: 0;
+      gap: 50px;
+      flex-direction: column;
+      justify-content: initial;
+      align-items: flex-start;
+    }
+
+    @include vp-767 {
+      gap: 30px;
+    }
+  }
+
+  br {
+    @include vp-1023 {
+      display: none;
+    }
   }
 }
 
@@ -505,6 +748,22 @@ img {
   align-items: center;
   margin-top: 517px;
   width: 100%;
+
+  @media (max-width: 1650px) {
+    margin-top: 150px;
+  }
+
+  @include vp-1439 {
+    padding: 0 30px;
+  }
+
+  @include vp-1023 {
+    margin-top: 100px;
+  }
+
+  @include vp-767 {
+    margin-top: 120px;
+  }
 
   &_title {
     color: #fff;
@@ -519,6 +778,10 @@ img {
     @include vp-1023 {
       font-size: 40px;
     }
+
+    @include vp-767 {
+      font-size: 30px;
+    }
   }
 
   &_stages {
@@ -530,6 +793,17 @@ img {
     display: flex;
     justify-content: center;
     gap: 70px;
+
+    @media (max-width: 1650px) {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      justify-items: center;
+    }
+
+    @include vp-767 {
+      margin-top: 70px;
+      grid-template-columns: 1fr;
+    }
   }
 
   &_bottom {
@@ -537,12 +811,53 @@ img {
     align-items: center;
     justify-content: center;
     gap: 140px;
+
+    @media (max-width: 1650px) {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      justify-items: center;
+      margin-top: 50px;
+      gap: 70px;
+    }
+
+    @include vp-1023 {
+      grid-template-columns: 1fr;
+    }
   }
 
   &_item {
     &-2,
     &-4 {
       margin-top: 200px;
+
+      @media (max-width: 1650px) {
+        margin-top: 0;
+      }
+    }
+
+    &-7 {
+      @media (max-width: 1650px) {
+        grid-column: 1 / -1;
+      }
+    }
+
+    &-1,
+    &-2,
+    &-3,
+    &-4 {
+      @include vp-1023 {
+        width: 258px;
+        height: 443px;
+      }
+    }
+
+    &-5,
+    &-7 {
+      @media (max-width: 500px) {
+        width: 100%;
+        height: auto;
+        object-fit: contain;
+      }
     }
   }
 }
@@ -554,6 +869,14 @@ img {
   width: 100%;
   padding-top: 377px;
   padding-bottom: 143px;
+
+  @include vp-1919 {
+    padding-top: 120px;
+  }
+
+  @include vp-767 {
+    padding-bottom: 60px;
+  }
 
   &_link {
     position: relative;
@@ -569,11 +892,33 @@ img {
     background: #43b446;
     padding: 20px 95px;
     margin-left: 184px;
+    transition: $trans-default;
+
+    &:hover,
+    &:focus {
+      transform: scale(1.1);
+    }
 
     img {
       position: absolute;
       bottom: -160px;
       right: -15px;
+
+      @include vp-767 {
+        width: 100px;
+        height: auto;
+        bottom: -81px;
+      }
+    }
+
+    @include vp-1439 {
+      margin-left: auto;
+      margin-right: auto;
+    }
+
+    @include vp-767 {
+      font-size: 30px;
+      padding: 10px 30px;
     }
   }
 
@@ -582,11 +927,33 @@ img {
     align-self: flex-end;
     margin-top: -20px;
     right: -120px;
+
+    @include vp-1919 {
+      margin-top: 160px;
+    }
+
+    @include vp-1439 {
+      width: 75%;
+      right: 0;
+    }
+
+    @include vp-1023 {
+      width: 90%;
+    }
+
+    @include vp-767 {
+      margin-top: 100px;
+    }
   }
 
   &_screenImg-1 {
     position: relative;
     z-index: 3;
+
+    @include vp-1439 {
+      width: 100%;
+      height: auto;
+    }
   }
 
   &_screenImg-2 {
@@ -594,6 +961,10 @@ img {
     z-index: 2;
     top: 96px;
     right: 120px;
+
+    @include vp-1919 {
+      display: none;
+    }
   }
 
   &_screenImg-3 {
@@ -603,6 +974,10 @@ img {
     right: 94px;
     width: 1300px;
     height: 1315px;
+
+    @include vp-1919 {
+      display: none;
+    }
   }
 
   &_description {
@@ -615,6 +990,16 @@ img {
     line-height: 40px; /* 114.286% */
     text-transform: uppercase;
     padding: 0 40px;
+
+    @include vp-1919 {
+      margin-top: 130px;
+    }
+
+    @include vp-767 {
+      margin-top: 40px;
+      font-size: 20px;
+      line-height: 1.2;
+    }
   }
 }
 
@@ -627,10 +1012,9 @@ img {
   background-size: cover;
   background-repeat: no-repeat;
 
-  @include vp-1439 {
-  }
-
-  @include vp-767 {
+  @media (max-width: 1600px) {
+    padding-bottom: 100px;
+    background-position: center;
   }
 
   &_container {
@@ -641,6 +1025,13 @@ img {
     padding: 0 60px;
     padding-left: 139px;
     max-width: 1850px;
+
+    @media (max-width: 1600px) {
+      flex-direction: column;
+      justify-content: initial;
+      align-items: center;
+      padding: 0 30px;
+    }
   }
 
   &_titleWrapper {
@@ -664,10 +1055,17 @@ img {
     @include vp-1023 {
       font-size: 40px;
       line-height: 1.2;
+      flex-direction: column;
+      align-items: center;
     }
 
     @include vp-767 {
       font-size: 30px;
+    }
+
+    img {
+      @include vp-1023 {
+      }
     }
   }
 
@@ -690,11 +1088,15 @@ img {
   &_socialList {
     margin-top: 40px;
     display: flex;
-    gap: 50px;
+    gap: 30px;
 
-    @include vp-1023 {
-      margin-top: 25px;
-      gap: 30px;
+    @media (max-width: 1600px) {
+      margin-top: 90px;
+    }
+
+    @include vp-767 {
+      flex-wrap: wrap;
+      justify-content: center;
     }
   }
 
@@ -709,6 +1111,7 @@ img {
     border-radius: 11.154px;
     border: 2.231px solid #fff;
     box-shadow: 0px 0px 5px 0px rgba(17, 255, 68, 0.4);
+    color: #3a9f3b;
 
     @include vp-1023 {
     }
@@ -718,7 +1121,57 @@ img {
 
     &:hover,
     &:focus {
-      opacity: 0.7;
+      color: #fff;
+      box-shadow: none;
+    }
+
+    &--apple {
+      position: relative;
+      background: transparent;
+      padding: 0;
+
+      &::after {
+        content: 'coming soon';
+        position: absolute;
+        text-transform: uppercase;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 426px;
+        height: 61px;
+        border-radius: 17.557px;
+        background: #449545;
+        color: #fff;
+        text-align: center;
+        font-size: 30px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 75px; /* 250% */
+        letter-spacing: 1.2px;
+        text-transform: uppercase;
+        top: -75px;
+        transition: $trans-modal;
+        transform: scale(0);
+        font-family: 'Anton';
+
+        @include vp-1023 {
+          width: 200px;
+          font-size: 20px;
+          padding: 10px 30px;
+          line-height: 1;
+        }
+
+        @include vp-767 {
+          left: 0;
+        }
+      }
+
+      &:hover,
+      &:focus {
+        &::after {
+          transform: scale(1);
+        }
+      }
     }
   }
 }
